rlctbg/raylib.py


_rl.GetKeyPressed.argtypes = []
_rl.GetKeyPressed.restype = c_int
def get_key_pressed() -> int:
    return _rl.GetKeyPressed()


_rl.IsGamepadAvailable.argtypes = [c_int]
_rl.IsGamepadAvailable.restype = c_bool
def is_gamepad_available(gamepad: int) -> bool:
    return _rl.IsGamepadAvailable(gamepad)


_rl.IsGamepadName.argtypes = [c_int, c_char_p]
_rl.IsGamepadName.restype = c_bool
def is_gamepad_name(gamepad: int, name: bytes) -> bool:
    return _rl.IsGamepadName(gamepad, name)


_rl.GetGamepadName.argtypes = [c_int]
_rl.GetGamepadName.restype = c_char_p
def get_gamepad_name(gamepad: int) -> bytes:
    return _rl.GetGamepadName(gamepad)


_rl.IsGamepadButtonPressed.argtypes = [c_int, c_int]
_rl.IsGamepadButtonPressed.restype = c_bool
def is_gamepad_button_pressed(gamepad: int, button: int) -> bool:
    return _rl.IsGamepadButtonPressed(gamepad, button)


_rl.IsGamepadButtonDown.argtypes = [c_int, c_int]
_rl.IsGamepadButtonDown.restype = c_bool
def is_gamepad_button_down(gamepad: int, button: int) -> bool:
    return _rl.IsGamepadButtonDown(gamepad, button)


_rl.IsGamepadButtonReleased.argtypes = [c_int, c_int]
_rl.IsGamepadButtonReleased.restype = c_bool
def is_gamepad_button_released(gamepad: int, button: int) -> bool:
    return _rl.IsGamepadButtonReleased(gamepad, button)


_rl.IsGamepadButtonUp.argtypes = [c_int, c_int]
_rl.IsGamepadButtonUp.restype = c_bool
def is_gamepad_button_up(gamepad: int, button: int) -> bool:
    return _rl.IsGamepadButtonUp(gamepad, button)


_rl.GetGamepadButtonPressed.argtypes = []
_rl.GetGamepadButtonPressed.restype = c_int
def get_gamepad_button_pressed() -> int:
    return _rl.GetGamepadButtonPressed()


_rl.GetGamepadAxisCount.argtypes = [c_int]
_rl.GetGamepadAxisCount.restype = c_int
def get_gamepad_axis_count(gamepad: int) -> int:
    return _rl.GetGamepadAxisCount(gamepad)


_rl.GetGamepadAxisMovement.argtypes = [c_int, c_int]
_rl.GetGamepadAxisMovement.restype = c_float
def get_gamepad_axis_movement(gamepad: int, axis: int) -> float:
    return _rl.GetGamepadAxisMovement(gamepad, axis)


_rl.IsMouseButtonPressed.argtypes = [c_int]
_rl.IsMouseButtonPressed.restype = c_bool
def is_mouse_button_pressed(button: int) -> bool:
    return _rl.IsMouseButtonPressed(button)


_rl.IsMouseButtonDown.argtypes = [c_int]
_rl.IsMouseButtonDown.restype = c_bool
def is_mouse_button_down(button: int) -> bool:
    return _rl.IsMouseButtonDown(button)


_rl.IsMouseButtonReleased.argtypes = [c_int]
_rl.IsMouseButtonReleased.restype = c_bool
def is_mouse_button_released(button: int) -> bool:
    return _rl.IsMouseButtonReleased(button)


_rl.IsMouseButtonUp.argtypes = [c_int]
_rl.IsMouseButtonUp.restype = c_bool
def is_mouse_button_up(button: int) -> bool:
    return _rl.IsMouseButtonUp(button)


_rl.GetMouseX.argtypes = []
_rl.GetMouseX.restype = c_int
def get_mouse_x() -> int:
    return _rl.GetMouseX()


_rl.GetMouseY.argtypes = []
_rl.GetMouseY.restype = c_int
def get_mouse_y() -> int:
    return _rl.GetMouseY()


_rl.GetMousePosition.argtypes = []
_rl.GetMousePosition.restype = Vector2
def get_mouse_position() -> Vector2:
    return _rl.GetMousePosition()


_rl.SetMousePosition.argtypes = [c_int, c_int]
_rl.SetMousePosition.restype = None
def set_mouse_position(x: int, y: int) -> None:
    _rl.SetMousePosition(x, y)


_rl.SetMouseOffset.argtypes = [c_int, c_int]
_rl.SetMouseOffset.restype = None
def set_mouse_offset(offset_x: int, offset_y: int) -> None:
    _rl.SetMouseOffset(offset_x, offset_y)


_rl.SetMouseScale.argtypes = [c_float, c_float]
_rl.SetMouseScale.restype = None
def set_mouse_scale(scale_x: float, scale_y: float) -> None:
    _rl.SetMouseScale(scale_x, scale_y)


_rl.GetMouseWheelMove.argtypes = []
_rl.GetMouseWheelMove.restype = c_int
def get_mouse_wheel_move() -> int:
    return _rl.GetMouseWheelMove()


_rl.GetTouchX.argtypes = []
_rl.GetTouchX.restype = c_int
def get_touch_x() -> int:
    return _rl.GetTouchX()


_rl.GetTouchY.argtypes = []
_rl.GetTouchY.restype = c_int
def get_touch_y() -> int:
    return _rl.GetTouchY()


_rl.GetTouchPosition.argtypes = [c_int]
_rl.GetTouchPosition.restype = Vector2
def get_touch_position(index: int) -> Vector2:
    return _rl.GetTouchPosition(index)


_rl.SetGesturesEnabled.argtypes = [c_uint]
_rl.SetGesturesEnabled.restype = None
def set_gestures_enabled(gesture_flags: int) -> None:
    _rl.SetGesturesEnabled(gesture_flags)


_rl.IsGestureDetected.argtypes = [c_int]
_rl.IsGestureDetected.restype = c_bool
def is_gesture_detected(gesture: int) -> bool:
    return _rl.IsGestureDetected(gesture)


_rl.GetGestureDetected.argtypes = []
_rl.GetGestureDetected.restype = c_int
def get_gesture_detected() -> int:
    return _rl.GetGestureDetected()


_rl.GetTouchPointsCount.argtypes = []
_rl.GetTouchPointsCount.restype = c_int
def get_touch_points_count() -> int:
    return _rl.GetTouchPointsCount()


_rl.GetGestureHoldDuration.argtypes = []
_rl.GetGestureHoldDuration.restype = c_float
def get_gesture_hold_duration() -> float:
    return _rl.GetGestureHoldDuration()


_rl.GetGestureDragVector.argtypes = []
_rl.GetGestureDragVector.restype = Vector2
def get_gesture_drag_vector() -> Vector2:
    return _rl.GetGestureDragVector()


_rl.GetGestureDragAngle.argtypes = []
_rl.GetGestureDragAngle.restype = c_float
def get_gesture_drag_angle() -> float:
    return _rl.GetGestureDragAngle()


_rl.GetGesturePinchVector.argtypes = []
_rl.GetGesturePinchVector.restype = Vector2
def get_gesture_pinch_vector() -> Vector2:
    return _rl.GetGesturePinchVector()


_rl.GetGesturePinchAngle.argtypes = []
_rl.GetGesturePinchAngle.restype = c_float
def get_gesture_pinch_angle() -> float:
    return _rl.GetGesturePinchAngle()


_rl.SetCameraMode.argtypes = [Camera, c_int]
_rl.SetCameraMode.restype = None
def set_camera_mode(camera: Camera, mode: int) -> None:
    _rl.SetCameraMode(camera, mode)


_rl.UpdateCamera.argtypes = [POINTER(Camera)]
_rl.UpdateCamera.restype = None
def update_camera(camera: POINTER(Camera)) -> None:
    _rl.UpdateCamera(camera)


_rl.SetCameraPanControl.argtypes = [c_int]
_rl.SetCameraPanControl.restype = None
def set_camera_pan_control(pan_key: int) -> None:
    _rl.SetCameraPanControl(pan_key)


_rl.SetCameraAltControl.argtypes = [c_int]
_rl.SetCameraAltControl.restype = None
def set_camera_alt_control(alt_key: int) -> None:
    _rl.SetCameraAltControl(alt_key)


_rl.SetCameraSmoothZoomControl.argtypes = [c_int]
_rl.SetCameraSmoothZoomControl.restype = None
def set_camera_smooth_zoom_control(sz_key: int) -> None:
    _rl.SetCameraSmoothZoomControl(sz_key)


_rl.SetCameraMoveControls.argtypes = [c_int, c_int, c_int, c_int, c_int, c_int]
_rl.SetCameraMoveControls.restype = None
def set_camera_move_controls(front_key: int, back_key: int, right_key: int, left_key: int, up_key: int, down_key: int) -> None:
    _rl.SetCameraMoveControls(front_key, back_key, right_key, left_key, up_key, down_key)


_rl.DrawPixel.argtypes = [c_int, c_int, Color]
_rl.DrawPixel.restype = None
def draw_pixel(pos_x: int, pos_y: int, color: Color) -> None:
    _rl.DrawPixel(pos_x, pos_y, color)


_rl.DrawPixelV.argtypes = [Vector2, Color]
_rl.DrawPixelV.restype = None
def draw_pixel_v(position: Vector2, color: Color) -> None:
    _rl.DrawPixelV(position, color)


_rl.DrawLine.argtypes = [c_int, c_int, c_int, c_int, Color]
_rl.DrawLine.restype = None
def draw_line(start_pos_x: int, start_pos_y: int, end_pos_x: int, end_pos_y: int, color: Color) -> None:
    _rl.DrawLine(start_pos_x, start_pos_y, end_pos_x, end_pos_y, color)


_rl.DrawLineV.argtypes = [Vector2, Vector2, Color]
_rl.DrawLineV.restype = None
def draw_line_v(start_pos: Vector2, end_pos: Vector2, color: Color) -> None:
    _rl.DrawLineV(start_pos, end_pos, color)


_rl.DrawLineEx.argtypes = [Vector2, Vector2, c_float, Color]
_rl.DrawLineEx.restype = None
def draw_line_ex(start_pos: Vector2, end_pos: Vector2, thick: float, color: Color) -> None:
    _rl.DrawLineEx(start_pos, end_pos, thick, color)


_rl.DrawLineBezier.argtypes = [Vector2, Vector2, c_float, Color]
_rl.DrawLineBezier.restype = None
def draw_line_bezier(start_pos: Vector2, end_pos: Vector2, thick: float, color: Color) -> None:
    _rl.DrawLineBezier(start_pos, end_pos, thick, color)


_rl.DrawLineStrip.argtypes = [POINTER(Vector2), c_int, Color]
_rl.DrawLineStrip.restype = None
def draw_line_strip(points: POINTER(Vector2), num_points: int, color: Color) -> None:
    _rl.DrawLineStrip(points, num_points, color)


_rl.DrawCircle.argtypes = [c_int, c_int, c_float, Color]
_rl.DrawCircle.restype = None
def draw_circle(center_x: int, center_y: int, radius: float, color: Color) -> None:
    _rl.DrawCircle(center_x, center_y, radius, color)


_rl.DrawCircleSector.argtypes = [Vector2, c_float, c_int, c_int, c_int, Color]
_rl.DrawCircleSector.restype = None
def draw_circle_sector(center: Vector2, radius: float, start_angle: int, end_angle: int, segments: int, color: Color) -> None:
    _rl.DrawCircleSector(center, radius, start_angle, end_angle, segments, color)


_rl.DrawCircleSectorLines.argtypes = [Vector2, c_float, c_int, c_int, c_int, Color]
_rl.DrawCircleSectorLines.restype = None
def draw_circle_sector_lines(center: Vector2, radius: float, start_angle: int, end_angle: int, segments: int, color: Color) -> None:
    _rl.DrawCircleSectorLines(center, radius, start_angle, end_angle, segments, color)


_rl.DrawCircleGradient.argtypes = [c_int, c_int, c_float, Color, Color]
_rl.DrawCircleGradient.restype = None
def draw_circle_gradient(center_x: int, center_y: int, radius: float, color1: Color, color2: Color) -> None:
    _rl.DrawCircleGradient(center_x, center_y, radius, color1, color2)


_rl.DrawCircleV.argtypes = [Vector2, c_float, Color]
_rl.DrawCircleV.restype = None
def draw_circle_v(center: Vector2, radius: float, color: Color) -> None:
    _rl.DrawCircleV(center, radius, color)


_rl.DrawCircleLines.argtypes = [c_int, c_int, c_float, Color]
_rl.DrawCircleLines.restype = None
def draw_circle_lines(center_x: int, center_y: int, radius: float, color: Color) -> None:
    _rl.DrawCircleLines(center_x, center_y, radius, color)


_rl.DrawRing.argtypes = [Vector2, c_float, c_float, c_int, c_int, c_int, Color]
_rl.DrawRing.restype = None
def draw_ring(center: Vector2, inner_radius: float, outer_radius: float, start_angle: int, end_angle: int, segments: int, color: Color) -> None:
    _rl.DrawRing(center, inner_radius, outer_radius, start_angle, end_angle, segments, color)


_rl.DrawRingLines.argtypes = [Vector2, c_float, c_float, c_int, c_int, c_int, Color]
_rl.DrawRingLines.restype = None
def draw_ring_lines(center: Vector2, inner_radius: float, outer_radius: float, start_angle: int, end_angle: int, segments: int, color: Color) -> None:
    _rl.DrawRingLines(center, inner_radius, outer_radius, start_angle, end_angle, segments, color)


_rl.DrawRectangle.argtypes = [c_int, c_int, c_int, c_int, Color]
_rl.DrawRectangle.restype = None
def draw_rectangle(pos_x: int, pos_y: int, width: int, height: int, color: Color) -> None:
    _rl.DrawRectangle(pos_x, pos_y, width, height, color)


_rl.DrawRectangleV.argtypes = [Vector2, Vector2, Color]
_rl.DrawRectangleV.restype = None
def draw_rectangle_v(position: Vector2, size: Vector2, color: Color) -> None:
    _rl.DrawRectangleV(position, size, color)


_rl.DrawRectangleRec.argtypes = [Rectangle, Color]
_rl.DrawRectangleRec.restype = None
def draw_rectangle_rec(rec: Rectangle, color: Color) -> None:
    _rl.DrawRectangleRec(rec, color)


_rl.DrawRectanglePro.argtypes = [Rectangle, Vector2, c_float, Color]
_rl.DrawRectanglePro.restype = None
def draw_rectangle_pro(rec: Rectangle, origin: Vector2, rotation: float, color: Color) -> None:
    _rl.DrawRectanglePro(rec, origin, rotation, color)

